// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCardChart Component should handle API response states: error 1`] = `
<graphcardchart
  props="{
  "children": []
}"
>
  <article
    class="pf-c-card pf-m-plain curiosity-usage-graph"
    data-ouia-component-id="OUIA-Generated-Card-3"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__header"
    >
      <div
        class="pf-c-card__title"
      >
        <h2
          class="pf-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-3"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          t(curiosity-graph.cardHeading, {})
        </h2>
      </div>
    </div>
    <div
      class="curiosity-minheight"
    >
      <div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="blur"
          >
            <div
              class="curiosity-chartarea uxui-curiosity__modal uxui-curiosity__modal--loading"
              data-test="curiosity-chartarea"
            />
          </div>
        </div>
      </div>
    </div>
  </article>
</graphcardchart>
`;

exports[`GraphCardChart Component should handle API response states: fulfilled 1`] = `
<graphcardchart
  props="{
  "children": []
}"
>
  <article
    class="pf-c-card pf-m-plain curiosity-usage-graph"
    data-ouia-component-id="OUIA-Generated-Card-4"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__header"
    >
      <div
        class="pf-c-card__title"
      >
        <h2
          class="pf-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-4"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          t(curiosity-graph.cardHeading, {})
        </h2>
      </div>
    </div>
    <div
      class="curiosity-minheight"
    >
      <div>
        <div
          class="pf-c-card__body"
        >
          <div
            class=""
          >
            <div
              class="curiosity-chartarea uxui-curiosity__modal uxui-curiosity__modal--loading"
              data-test="curiosity-chartarea"
            />
          </div>
        </div>
      </div>
    </div>
  </article>
</graphcardchart>
`;

exports[`GraphCardChart Component should handle API response states: pending 1`] = `
<graphcardchart
  props="{
  "children": []
}"
>
  <article
    class="pf-c-card pf-m-plain curiosity-usage-graph"
    data-ouia-component-id="OUIA-Generated-Card-2"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__header"
    >
      <div
        class="pf-c-card__title"
      >
        <h2
          class="pf-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-2"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          t(curiosity-graph.cardHeading, {})
        </h2>
      </div>
    </div>
    <div
      class="curiosity-minheight"
    >
      <div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="fadein"
          >
            <div
              class="curiosity-skeleton-container curiosity-skeleton-container-chart"
            >
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__lg"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
              <div
                class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__md"
              >
                <span
                  class="pf-u-screen-reader"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </article>
</graphcardchart>
`;

exports[`GraphCardChart Component should render a default component: default 1`] = `
<graphcardchart
  props="{
  "children": []
}"
>
  <article
    class="pf-c-card pf-m-plain curiosity-usage-graph"
    data-ouia-component-id="OUIA-Generated-Card-1"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__header"
    >
      <div
        class="pf-c-card__title"
      >
        <h2
          class="pf-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-1"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          t(curiosity-graph.cardHeading, {})
        </h2>
      </div>
    </div>
    <div
      class="curiosity-minheight"
    >
      <div>
        <div
          class="pf-c-card__body"
        >
          <div
            class=""
          >
            <div
              class="curiosity-chartarea uxui-curiosity__modal uxui-curiosity__modal--loading"
              data-test="curiosity-chartarea"
            />
          </div>
        </div>
      </div>
    </div>
  </article>
</graphcardchart>
`;
